<resources>
    <string name="app_name">FoodStick</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FOODSTICK">FOODSTICK</string>
    <string name="login">LOGIN</string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="signup">Sign up</string>
    <string name="Password">Password</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="name">Name (Min. 3 character)</string>
    <string name="Email">Email Address</string>
    <string name="address">Address</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="register1discription">Enter your registered mobile number and E-mail \nbelow:</string>
    <string name="register2discription">Enter the recieved OTP below</string>
    <string name="otp">OTP(4 character)</string>
    <string name="newPass">New Password (Min. 4 character)</string>
    <string name="confirmnPass">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="myprofile">My Profile</string>
    <string name="FavouriteRestaurants">Favourite Restrants</string>
    <string name="order_history">Order History</string>
    <string name="faq">FAQs</string>
    <string name="logout">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
</resources>
