<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />


        <item
            android:id="@+id/menu_profile"
            android:title="@string/myprofile"
            android:icon="@drawable/ic_person"/>

        <item
            android:id="@+id/menu_favourite"
            android:title="@string/FavouriteRestaurants"
            android:icon="@drawable/ic_heart_blank"/>

        <item
            android:id="@+id/menu_orderhistory"
            android:title="@string/order_history"
            android:icon="@drawable/ic_history"/>
        <item
            android:id="@+id/menu_faq"
            android:title="@string/faq"
            android:icon="@drawable/ic_question"/>
        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_exit"/>
    </group>
</menu>