<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentFPassword2"
        android:background="@color/layoutBackground">

        <TextView
            android:id="@+id/txt_Register2_discription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register2discription"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <EditText
            android:id="@+id/et_Register2_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="8dp"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:inputType="number"
            android:maxLength="4"
            android:background="@color/white"
            android:hint="@string/otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Register2_discription">

        </EditText>
        <EditText
            android:id="@+id/et_Register2_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="8dp"
            android:textSize="20sp"
            android:minEms="4"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"
            android:background="@color/white"
            android:hint="@string/newPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Register2_otp">

        </EditText>
        <EditText
            android:id="@+id/et_Register2_confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="8dp"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"
            android:minEms="4"
            android:background="@color/white"
            android:hint="@string/confirmnPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Register2_newPass">

        </EditText>
        <Button
            android:id="@+id/btn_register2_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="8dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Register2_confirmPass"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>